Fix readme and do some more tweaks

--- a/src/app/show-best/show-best.component.html
+++ b/src/app/show-best/show-best.component.html
@@ -69,9 +69,9 @@
         <p><span class="up"><img src="./assets/upArrow.png"></span><span class="postVotes">{{post.upvotes}}</span><span
           class="down"><img src="./assets/downArrow.png"></span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span
           class="postTitle"><a href="{{post.link}}">{{post.title}}</a></span><br> <span
-          class="postInfo">Uploaded {{post.time}}
-          hours ago by: {{post.username}} </span> <br> <span class="postSource"> {{post.commentNum}} comments <a
-          href="{{post.link}}">source</a></span></p>
+          class="postInfo">submitted {{post.time}}
+          hours ago by {{post.username}} to {{post.subreddit}}</span> <br> <span class="postSource"> {{post.commentNum}} comments <a
+          href="{{post.link}}">   source</a></span></p>
         <br>
         <br>
         <br>
@@ -91,9 +91,9 @@
         <p><span class="up"><img src="./assets/upArrow.png"></span><span class="postVotes">{{post.upvotes}}</span><span
           class="down"><img src="./assets/downArrow.png"></span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span
           class="postTitle"><a href="{{post.link}}">{{post.title}}</a></span><br> <span
-          class="postInfo">Uploaded {{post.time}}
-          hours ago by: {{post.username}} </span> <br> <span class="postSource"> {{post.commentNum}} comments <a
-          href="{{post.link}}">source</a></span></p>
+          class="postInfo">submitted {{post.time}}
+          hours ago by {{post.username}} to {{post.subreddit}} </span> <br> <span class="postSource"> {{post.commentNum}} comments <a
+          href="{{post.link}}">   source</a></span></p>
         <br>
         <br>
         <br>
@@ -106,9 +106,9 @@
         <p><span class="up"><img src="./assets/upArrow.png"></span><span class="postVotes">{{post.upvotes}}</span><span
           class="down"><img src="./assets/downArrow.png"></span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span
           class="postTitle"><a href="{{post.link}}">{{post.title}}</a></span><br> <span
-          class="postInfo">Uploaded {{post.time}}
-          hours ago by: {{post.username}} </span> <br> <span class="postSource"> {{post.commentNum}} comments <a
-          href="{{post.link}}">source</a></span></p>
+          class="postInfo">submitted {{post.time}}
+          hours ago by {{post.username}} to {{post.subreddit}} </span> <br> <span class="postSource"> {{post.commentNum}} comments <a
+          href="{{post.link}}">   source</a></span></p>
         <br>
         <br>
         <br>
@@ -121,9 +121,9 @@
         <p><span class="up"><img src="./assets/upArrow.png"></span><span class="postVotes">{{post.upvotes}}</span><span
           class="down"><img src="./assets/downArrow.png"></span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span
           class="postTitle"><a href="{{post.link}}">{{post.title}}</a></span><br> <span
-          class="postInfo">Uploaded {{post.time}}
-          hours ago by: {{post.username}} </span> <br> <span class="postSource"> {{post.commentNum}} comments <a
-          href="{{post.link}}">source</a></span></p>
+          class="postInfo">submitted {{post.time}}
+          hours ago by {{post.username}} to {{post.subreddit}} </span> <br> <span class="postSource"> {{post.commentNum}} comments <a
+          href="{{post.link}}">   source</a></span></p>
         <br>
         <br>
         <br>
@@ -136,9 +136,9 @@
         <p><span class="up"><img src="./assets/upArrow.png"></span><span class="postVotes">{{post.upvotes}}</span><span
           class="down"><img src="./assets/downArrow.png"></span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span
           class="postTitle"><a href="{{post.link}}">{{post.title}}</a></span><br> <span
-          class="postInfo">Uploaded {{post.time}}
-          hours ago by: {{post.username}} </span> <br> <span class="postSource"> {{post.commentNum}} comments <a
-          href="{{post.link}}">source</a></span></p>
+          class="postInfo">submitted {{post.time}}
+          hours ago by {{post.username}} to {{post.subreddit}} </span> <br> <span class="postSource"> {{post.commentNum}} comments <a
+          href="{{post.link}}">   source</a></span></p>
         <br>
         <br>
         <br>
@@ -151,9 +151,9 @@
         <p><span class="up"><img src="./assets/upArrow.png"></span><span class="postVotes">{{post.upvotes}}</span><span
           class="down"><img src="./assets/downArrow.png"></span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span
           class="postTitle"><a href="{{post.link}}">{{post.title}}</a></span><br> <span
-          class="postInfo">Uploaded {{post.time}}
-          hours ago by: {{post.username}} </span> <br> <span class="postSource"> {{post.commentNum}} comments <a
-          href="{{post.link}}">source</a></span></p>
+          class="postInfo">submitted {{post.time}}
+          hours ago by {{post.username}} to {{post.subreddit}} </span> <br> <span class="postSource"> {{post.commentNum}} comments <a
+          href="{{post.link}}">   source</a></span></p>
         <br>
         <br>
         <br>
