--- a/src/app/show-best/show-best.component.css
+++ b/src/app/show-best/show-best.component.css
@@ -2,12 +2,10 @@
 .context {
   text-align: center;
 }
-
-h4 {
-  color: #919191;
-  font-size: 26px;
-  font-weight: 900;
+a{
+  text-decoration: none;
 }
+
 
 .sidebar {
   background: #eeeeee;
@@ -61,8 +59,9 @@ h4 {
 }
 
 .menu-btn {
+  border-radius: 20px;
   top: 8px;
-  right: 0px;
+  right: 2px;
   position: absolute;
   cursor: pointer;
   display: block;
@@ -72,7 +71,7 @@ h4 {
 }
 
 .menu-btn span {
-  background-color: black;
+  background-color: #0d61ba;
   border-radius: 5px;
   display: block;
   height: 3px;
@@ -183,7 +182,7 @@ nav, .nav-tabs > li.active a, nav, .nav-tabs > li.active a:hover, nav,
 
 .tab-content {
   color: white;
-  background-color: #e6e6e6;
+  background-color: white;
   padding: 5px 15px;
 }
 
@@ -285,7 +284,7 @@ li.active a:before {
 }
 
 .tab-pane .postImage img {
-  border-radius: 25px;
+  border-radius: 4px;
   width: 75px;
   height: 75px;
 }
@@ -299,7 +298,7 @@ li.active a:before {
 }
 
 .postImage {
-  border-radius: 25px;
+  border-radius: 2px;
   padding-top: 20px;
   left: 63px;
   margin-bottom: 5px;
@@ -310,24 +309,27 @@ li.active a:before {
   position: absolute;
   left: 142px;
   color: #a3a3a3;
-  padding-top: 46px;
+  padding-top: 42px;
 }
 
 .postSource {
   font-weight: 900;
   left: 142px;
-  padding-top: 50px;
+  padding-top: 41px;
   position: absolute;
   color: #919191;
 }
 
 .postTitle {
+  line-height: 23px;
+
   font-weight: 900;
-  font-size: 23px;
+  font-size: 20px;
   left: 142px;
   position: absolute;
-  padding-top: 15px;
+  padding-top: 18px;
   color: #2c66c1;
+  font-family: 'Catamaran', sans-serif;
 }
 
 .postVotes {
@@ -389,6 +391,12 @@ li.active a:before {
 
 }
 
-
-
-
+div .sortTitle {
+ text-align: -moz-left;
+  color: #2c66c1;
+  font-family: 'Catamaran', sans-serif;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  font-size: 26px;
+  font-weight: 900;
+}
