--- a/src/app/show-best/show-best.component.html
+++ b/src/app/show-best/show-best.component.html
@@ -1,6 +1,8 @@
 <header>
   <link href="https://fonts.googleapis.com/css?family=Roboto:900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Catamaran:700&display=swap" rel="stylesheet">
+
 </header>
 <div class="bodyNav">
   <ul class="nav nav-tabs">
@@ -61,10 +63,11 @@
   <span class="middle"></span>
   <span class="bottom"></span>
 </label>
-<section class="container">
+<section >
   <div class="tab-content">
     <div *ngIf="showBestCheck">
-      <h4>Best Reddit Posts</h4>
+
+      <p class="sortTitle">Best Reddit Posts</p>
       <div class="tab-pane active" id="tab1" *ngFor="let post of masterPostList">
         <p><span class="up"><img src="./assets/upArrow.png"></span><span class="postVotes">{{post.upvotes}}</span><span
           class="down"><img src="./assets/downArrow.png"></span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span
@@ -86,7 +89,7 @@
     <!--    // public link: string-->
     <!--    // public thumbnail: string-->
     <div *ngIf="showHotCheck">
-      <h4>Hottest Reddit Posts</h4>
+      <p class="sortTitle">Hottest Reddit Posts</p>
       <div class="tab-pane active" id="tab1" *ngFor="let post of masterPostList">
         <p><span class="up"><img src="./assets/upArrow.png"></span><span class="postVotes">{{post.upvotes}}</span><span
           class="down"><img src="./assets/downArrow.png"></span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span
@@ -101,7 +104,7 @@
     </div>
 
     <div *ngIf="showNewCheck">
-      <h4>Newest Reddit Posts</h4>
+      <p class="sortTitle">Newest Reddit Posts</p>
       <div class="tab-pane active" id="tab1" *ngFor="let post of masterPostList">
         <p><span class="up"><img src="./assets/upArrow.png"></span><span class="postVotes">{{post.upvotes}}</span><span
           class="down"><img src="./assets/downArrow.png"></span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span
@@ -116,7 +119,7 @@
     </div>
 
     <div *ngIf="showRisingCheck">
-      <h4>Top Rising Posts</h4>
+      <p class="sortTitle">Top Rising Posts</p>
       <div class="tab-pane active" id="tab1" *ngFor="let post of masterPostList">
         <p><span class="up"><img src="./assets/upArrow.png"></span><span class="postVotes">{{post.upvotes}}</span><span
           class="down"><img src="./assets/downArrow.png"></span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span
@@ -131,7 +134,7 @@
     </div>
 
     <div *ngIf="showControversialCheck">
-      <h4>Top Controversial Posts</h4>
+      <p class="sortTitle">Top Controversial Posts</p>
       <div class="tab-pane active" id="tab1" *ngFor="let post of masterPostList">
         <p><span class="up"><img src="./assets/upArrow.png"></span><span class="postVotes">{{post.upvotes}}</span><span
           class="down"><img src="./assets/downArrow.png"></span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span
@@ -146,7 +149,7 @@
     </div>
 
     <div *ngIf="showTopCheck">
-      <h4>Top Reddit Posts</h4>
+      <p class="sortTitle">Top Reddit Posts</p>
       <div class="tab-pane active" id="tab1" *ngFor="let post of masterPostList">
         <p><span class="up"><img src="./assets/upArrow.png"></span><span class="postVotes">{{post.upvotes}}</span><span
           class="down"><img src="./assets/downArrow.png"></span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span
