--- a/src/app/showBest/showBest.component.html
+++ b/src/app/showBest/showBest.component.html
@@ -1,73 +1,11 @@
-<header>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Catamaran:700&display=swap" rel="stylesheet">
-
-</header>
-<div class="bodyNav">
-  <ul class="nav nav-tabs">
-    <li id="siteLogo">
-      <p class="pClass"><a href="#main-nav" class="open-menu"><img src="./assets/redditIcon.png"></a>{{title}}</p>
-    </li>
-
-    <li class="active siteGuide">
-      <a href="#tab1" (click)="showBest()" data-toggle="tab">best</a>
-    </li>
-    <li class="siteGuide">
-      <a href="#tab2" (click)="showHot()" data-toggle="tab">hot</a>
-    </li>
-    <li class="siteGuide">
-      <a href="#tab3" (click)="showNew()" data-toggle="tab">new</a>
-    </li>
-    <li class="siteGuide">
-      <a href="#tab4" (click)="showRising()" data-toggle="tab">rising</a>
-    </li>
-    <li class="siteGuide">
-      <a href="#tab4" (click)="showControversial()" data-toggle="tab">controversial</a>
-    </li>
-    <li class="siteGuide">
-      <a href="#tab4" (click)="showTop()" data-toggle="tab">top</a>
-    </li>
-    <li class="siteGuide">
-      <a href="https://en.wikipedia.org/wiki/Reddit" data-toggle="tab">wiki</a>
-    </li>
-    <li class="siteTopRight1">
-      <a href="#tab4" data-toggle="tab">  {{myUserName}}</a>
-    </li>
-    <li class="siteTopRight2">
-      <a href="#tab4" data-toggle="tab"><img src="./assets/redditLogo.png"></a>
-    </li>
-    <li class="siteTopRight3">
-      <a href="#tab4" data-toggle="tab">({{postKarma}} - {{commentKarma}})</a>
-    </li>
-    <li class="siteTopRight4">
-      <a href="#tab4" data-toggle="tab"> | <img src="./assets/mail.png"> | </a>
-    </li>
-    <li class="siteTopRight5">
-      <a href="#tab4" data-toggle="tab"><img src="./assets/message.png"> |</a>
-    </li>
-    <li class="siteTopRight6">
-      <a href="#tab4" data-toggle="tab"><img src="./assets/settings.png"> |</a>
-    </li>
-    <li class="siteTopRight7">
-      <a href="#tab4" data-toggle="tab">logout</a>
-    </li>
-
-  </ul>
 
 
-</div>
-<input type="checkbox" id="menu" class="menu-cek">
-<label for="menu" class="menu-btn">
-  <span class="top"></span>
-  <span class="middle"></span>
-  <span class="bottom"></span>
-</label>
 <section >
   <div class="tab-content">
-    <div *ngIf="showBestCheck">
-
+    <div>
+      <div class="moveTitle">
       <p class="sortTitle">Best Reddit Posts</p>
+      </div>
       <div class="tab-pane active" id="tab1" *ngFor="let post of masterPostList">
         <p><span class="up"><img src="./assets/upArrow.png"></span><span class="postVotes">{{post.upvotes}}</span><span
           class="down"><img src="./assets/downArrow.png"></span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span
@@ -164,27 +102,3 @@
     </div>
   </div>
 </section>
-<aside class="sidebar">
-  <ul>
-    <li><input type="text" placeholder="Search.."></li>
-    <li><img src="./assets/button1.JPG"></li>
-    <li><img src="./assets/button2.JPG"></li>
-    <li><img src="./assets/redditGold.JPG"></li>
-    <li><img src="./assets/button3.JPG"></li>
-    <li><img src="./assets/bottomImage.JPG"></li>
-    <li><a href="#tab1" (click)="showBest()" data-toggle="tab">best</a></li>
-    <li><a href="#tab2" (click)="showHot()" data-toggle="tab">hot</a></li>
-    <li><a href="#tab3" (click)="showNew()" data-toggle="tab">new</a></li>
-    <li><a href="#tab4" (click)="showRising()" data-toggle="tab">rising</a></li>
-    <li><a href="#tab4" (click)="showControversial()" data-toggle="tab">controversial</a></li>
-    <li><a href="#tab4" (click)="showTop()" data-toggle="tab">top</a></li>
-    <li><a href="https://en.wikipedia.org/wiki/Reddit" data-toggle="tab">wiki</a></li>
-    <li><img src="./assets/redditIcon.png"></li>
-    <li><img src="./assets/redditIcon.png"></li>
-    <li><img src="./assets/redditIcon.png"></li>
-    <li><img src="./assets/redditIcon.png"></li>
-    <li><img src="./assets/redditIcon.png"></li>
-    <li><img src="./assets/redditIcon.png"></li>
-    <li><img src="./assets/redditIcon.png"></li>
-  </ul>
-</aside>
