--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,19 +16,19 @@
       <a href="/best" data-toggle="tab">best</a>
     </li>
     <li class="siteGuide">
-      <a href="#tab2" data-toggle="tab">hot</a>
+      <a href="/hot" data-toggle="tab">hot</a>
     </li>
     <li class="siteGuide">
-      <a href="#tab3" data-toggle="tab">new</a>
+      <a href="/new" data-toggle="tab">new</a>
     </li>
     <li class="siteGuide">
-      <a href="#tab4" data-toggle="tab">rising</a>
+      <a href="/rising" data-toggle="tab">rising</a>
     </li>
     <li class="siteGuide">
-      <a href="#tab4"  data-toggle="tab">controversial</a>
+      <a href="/controversial"  data-toggle="tab">controversial</a>
     </li>
     <li class="siteGuide">
-      <a href="#tab4"  data-toggle="tab">top</a>
+      <a href="/top"  data-toggle="tab">top</a>
     </li>
     <li class="siteGuide">
       <a href="https://en.wikipedia.org/wiki/Reddit" data-toggle="tab">wiki</a>
@@ -74,12 +74,12 @@
     <li><img src="./assets/redditGold.JPG"></li>
     <li><img src="./assets/button3.JPG"></li>
     <li><img src="./assets/bottomImage.JPG"></li>
-    <li><a href="#tab1" (click)="showBest()" data-toggle="tab">best</a></li>
-    <li><a href="#tab2" (click)="showHot()" data-toggle="tab">hot</a></li>
-    <li><a href="#tab3" (click)="showNew()" data-toggle="tab">new</a></li>
-    <li><a href="#tab4" (click)="showRising()" data-toggle="tab">rising</a></li>
-    <li><a href="#tab4" (click)="showControversial()" data-toggle="tab">controversial</a></li>
-    <li><a href="#tab4" (click)="showTop()" data-toggle="tab">top</a></li>
+    <li><a href="/best"  data-toggle="tab">best</a></li>
+    <li><a href="/hot"  data-toggle="tab">hot</a></li>
+    <li><a href="/new"  data-toggle="tab">new</a></li>
+    <li><a href="/rising"  data-toggle="tab">rising</a></li>
+    <li><a href="/controversial"  data-toggle="tab">controversial</a></li>
+    <li><a href="/top"  data-toggle="tab">top</a></li>
     <li><a href="https://en.wikipedia.org/wiki/Reddit" data-toggle="tab">wiki</a></li>
     <li><img src="./assets/redditIcon.png"></li>
     <li><img src="./assets/redditIcon.png"></li>
@@ -92,4 +92,4 @@
 </aside>
 
 
-<app-show-best>Loading Reddit</app-show-best>
+<router-outlet></router-outlet>
