--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
 <div class="bodyNav">
   <ul class="nav nav-tabs">
     <li id="siteLogo">
-      <p class="pClass"><a href="#main-nav" class="open-menu"><img src="./assets/redditIcon.png"></a>{{title}}</p>
+      <p class="pClass"><a href="/" class="open-menu"><img src="./assets/redditIcon.png">{{title}}</a></p>
     </li>
 
     <li class="active siteGuide">
