--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,3 +1,16 @@
-<p>
-  welcome works!
-</p>
+<header>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Catamaran:700&display=swap" rel="stylesheet">
+</header>
+<div class="container">
+<div class="jumbotron">
+<div class="welcome">
+  <h1>Welcome {{userName}} To The Reddit ReDesign</h1>
+  <h4>^Please choose a category above^</h4>
+  <p class ="accInfo">Post Karma(<span class="num">{{postKarma}}</span>)-(<span class="num">{{commentKarma}}</span>)Comment Karma</p>
+  <p class ="accInfo">You Have: <span class="num">0</span> Unread Messages</p>
+  <p class ="accInfo"><a href="/">--Log Out--</a></p>
+</div>
+</div>
+</div>
