More firebasing stuff it doesnt work

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -91,5 +91,9 @@
   </ul>
 </aside>
 
-
+<ul>
+  <li class="text" *ngFor="let item of items | async">
+    {{item.username}}
+  </li>
+</ul>
 <router-outlet></router-outlet>
